--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -59,6 +59,40 @@
   }
 }
 
+@media screen and (max-width: 390px) {
+  #form {
+    height: 480px;
+    width: 320px;
+    margin-top: 13.5px;
+    margin-bottom: 13.5px;
+  }
+  img {
+    display: none;
+  }
+  #input-data {
+    position: absolute;
+    left: 25px;
+    background-image: url(assets/Dining\ Vector.jpg);
+    background-size: 300px 440px;
+    background-color: rgba(255, 255, 255, 0.795);
+    background-blend-mode: color;
+    height: 440px;
+    width: 300px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  input {
+    width: 36.17%;
+  }
+  h1 {
+    font-size: 22px;
+    margin-left: 10px;
+  }
+  #submit-btn {
+    margin-left: 90px;
+    margin-right: 90px;
+  }
+}
 @media screen and (max-width: 375px) {
   #form {
     height: 480px;
